add bucky and postgres

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -23,3 +23,10 @@ command = /usr/bin/gunicorn_django -b127.0.0.1:8000 -w2 graphite/settings.py
 stdout_logfile = /var/log/supervisor/%(program_name)s.log
 stderr_logfile = /var/log/supervisor/%(program_name)s.log
 autorestart = true
+
+[program:bucky]
+command = bucky --disable-metricsd  --disable-collectd --statsd-ip=0.0.0.0
+stdout_logfile = /var/log/supervisor/%(program_name)s.log
+stderr_logfile = /var/log/supervisor/%(program_name)s.log
+autorestart = true
+
